fix nav spacing

--- a/_sass/modules/_masthead.sass
+++ b/_sass/modules/_masthead.sass
@@ -8,9 +8,9 @@
 
   &__title
     color: $white
-    font-size: $font-size--huge * 1.5
-    font-weight: $font-weight--bold
-    margin: 0
+    font-size: $font-size--huge * 1.1
+    font-weight: $font-weight--semibold
+    margin: 0 $spacing--normal
 
   &__meta
     color: rgba($white, .7)
