--- a/_sass/modules/_site-nav.sass
+++ b/_sass/modules/_site-nav.sass
@@ -64,7 +64,7 @@ $bar-height: 50px
 
 @media (min-width: $breakpoint--phone) and (max-width: $breakpoint--tablet - rem(1px))
 	.site-nav__link
-		padding: 0 .9rem
+		padding: 0 .84rem
 
 @media (min-width: $breakpoint--tablet)
 	.site-nav__link
